--- a/maxcoin/package.json
+++ b/maxcoin/package.json
@@ -8,9 +8,6 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^0.20.0"
-  },
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -18,5 +15,9 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
+  },
+  "dependencies": {
+    "axios": "^0.20.0",
+    "mongodb": "^3.6.2"
   }
 }
