--- a/shopper/package.json
+++ b/shopper/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.5",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
+    "mongoose": "^5.10.9",
     "pug": "~3.0.0"
   },
   "devDependencies": {
