--- a/shopper/package.json
+++ b/shopper/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon ./server/bin/start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "~1.19.0",
     "cookie-parser": "~1.4.5",
     "express": "~4.17.1",
