--- a/maxcoin/package.json
+++ b/maxcoin/package.json
@@ -17,7 +17,8 @@
     "prettier": "^2.1.2"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.24.0",
+    "ioredis": "^4.17.3",
     "mongodb": "^3.6.2"
   }
 }
