--- a/shopper/package.json
+++ b/shopper/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.5",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
+    "ioredis": "^4.17.3",
     "mongoose": "^5.10.9",
     "pug": "~3.0.0"
   },
