--- a/shopper/package.json
+++ b/shopper/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "~1.19.0",
+    "connect-redis": "^5.0.0",
     "cookie-parser": "~1.4.5",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
