--- a/maxcoin/package.json
+++ b/maxcoin/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "ioredis": "^4.17.3",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "mysql2": "^2.2.5"
   }
 }
